2025-06 Feature Update for Version Next (5.0.x)

--- a/incident-history/2024_incident-history.html
+++ b/incident-history/2024_incident-history.html
@@ -107,7 +107,7 @@
 
 
     <section id="lrd" class="flex-column justify-content-center">
-        <div class="row row-do">
+        <div class="row row-do wow fadeInUp" data-wow-delay="100ms">
             <!-- Month Tabs -->
             <div class="col-12">
                 <ul class="nav nav-tabs" id="ihTab" role="tablist">
@@ -123,19 +123,19 @@
                         <button class="nav-link" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button"
                             role="tab" aria-controls="tab3" aria-selected="true">October</button>
                     </li>
-                    <!-- <li class="nav-item-ic" role="history">
-                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button"
-                            role="tab" aria-controls="tab1" aria-selected="true">September</button>
+                    <li class="nav-item-ic" role="history">
+                        <button class="nav-link" id="tab4-tab" data-bs-toggle="tab" data-bs-target="#tab4" type="button"
+                            role="tab" aria-controls="tab4" aria-selected="true">September</button>
                     </li>
                     <li class="nav-item-ic" role="history">
-                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button"
-                            role="tab" aria-controls="tab1" aria-selected="true">August</button>
+                        <button class="nav-link" id="tab5-tab" data-bs-toggle="tab" data-bs-target="#tab5" type="button"
+                            role="tab" aria-controls="tab5" aria-selected="true">August</button>
                     </li>
-                    <li class="nav-item-ic" role="history">
-                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button"
-                            role="tab" aria-controls="tab1" aria-selected="true">July</button>
+                     <li class="nav-item-ic" role="history">
+                        <button class="nav-link" id="tab6-tab" data-bs-toggle="tab" data-bs-target="#tab6" type="button"
+                            role="tab" aria-controls="tab6" aria-selected="true">July</button>
                     </li>
-                    <li class="nav-item-ic" role="history">
+                     <!--<li class="nav-item-ic" role="history">
                         <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button"
                             role="tab" aria-controls="tab1" aria-selected="true">June</button>
                     </li>
@@ -300,15 +300,51 @@
                             </div>
                         </div>
 
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 01/12/2024
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/DTLCap.png" alt="CCL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SBSTransit_Ltd/status/1862984494321745926"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    DTL service from DT1 Bukit Panjang to DT6 King Albert Park (towards DT35 Expo) is
+                                    delayed due to a
+                                    signalling fault. Additional travel time of about 5 minutes may be expected. We are
+                                    sorry for the
+                                    inconvenience caused.
+                                </p>
+
+                            </div>
+                        </div>
 
                     </div>
 
                     <!-- Nov -->
                     <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
                         <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 08/11/2024
+                            </div>
                             <div class="card-body text-primary" style="position: relative;">
-                                <p class="card-text-ri" style="font-size: 17px;">
-                                    No Incidents Reported
+                                <img src="../img/caplets/DTLCap.png" alt="CCL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SBSTransit_Ltd/status/1854676063139643815"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    NEL service is delayed due to track fault at Harbour Front. Additional travel time
+                                    of about 5 minutes may be
+                                    expected. We are sorry for the inconvenience caused.
                                 </p>
 
                             </div>
@@ -384,9 +420,144 @@
 
                     </div>
 
+                    <!-- Sep -->
+                    <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 25/09/2024
+                                to 30/09/2024
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/EWLCap.png" alt="EWL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1839288385590145121"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    UPDATE: No train service between Jurong East and Buona Vista due to Track Repair
+                                    Works. Shuttle train
+                                    services are available between BNL and JUR. Shuttle train services are also
+                                    available between QUE and BNV.
+                                    Kindly follow station staff instruction to continue your journey. (3/3) <br><br>
+                                    UPDATE: Passengers travelling from Buona Vista towards Tuas Link, please find other
+                                    alternative travel
+                                    options on Circle Line to North-South Line. Free regular buses and bridging buses
+                                    are also available .Our
+                                    staff are attending to the matter. (2/3)<br><br>
+                                    Due to a power fault, there is no train service between #BoonLay and #Queenstown.
+                                    Free regular bus &
+                                    bridging bus services are available between #BoonLay and #Queenstown. (1/3)
+                                </p>
+
+                            </div>
+                        </div>
+
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 18/09/2024
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/CCLCap.png" alt="CCL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://www.facebook.com/SMRTCorpSG/posts/pfbid0sM3xsAFtjHYszDc2DER2eHunkMCUWqLpNzRKHpZ7vxZKPrwFWL3ndUh7w2bGzi5yl"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-facebook" style="font-size: 25px;" title="via Facebook"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    [UPDATE on 19 Sep at 9.29am]: On 18 Sep, around 8pm, a fire broke out in one of the
+                                    power system cubicles at
+                                    Kim Chuan Depot, causing a power supply disruption across the entire Circle Line
+                                    (CCL). This led to stalled
+                                    trains and affected lighting within the trains...
+                                </p>
+
+                            </div>
+                        </div>
+
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 17/09/2024
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/CCLCap.png" alt="CCL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1835984909422469581"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a power fault, please add 30 minutes additional travel time on the Circle
+                                    Line. Free Regular Buses
+                                    are available for all Circle Line stations. Please make use of alternative Lines for
+                                    your commute.
+                                </p>
+
+                            </div>
+                        </div>
+
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 05/09/2024
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/CCLCap.png" alt="CCL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1831435954827227347"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a signalling fault, normal train service is affected. Train service is
+                                    available between #ChoaChuKang
+                                    and #BukitPanjang. Train service between Bt Panjang and Senja is affected. Free bus
+                                    services between #Bt
+                                    Panjang and #Senja are available
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Aug -->
+                    <div class="tab-pane fade" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 25/08/2024
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/NSLCap.png" alt="CCL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1827231238303969746"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a track fault, pls add 25mins train travel time btwn #Kranji and #Yishun.
+                                    Free regular bus service is
+                                    available between Yishun and Kranji. Train service is still available.
+                                </p>
+
+                            </div>
+                        </div>
+
+
+
+                    </div>
+
+                    <!-- Jul -->
+                    <div class="tab-pane fade" id="tab6" role="tabpanel" aria-labelledby="tab6-tab">
+                    </div>
                 </div>
-            </div>
-        </div>
 
 
     </section><!-- End Hero -->
