--- a/incident-history/incident-history.html
+++ b/incident-history/incident-history.html
@@ -107,7 +107,7 @@
 
 
     <section id="lrd" class="flex-column justify-content-center">
-        <div class="row row-do">
+        <div class="row row-do wow fadeInUp" data-wow-delay="100ms">
             <!-- Month Tabs -->
             <div class="col-12">
                 <ul class="nav nav-tabs" id="ihTab" role="tablist">
