2025-06 Feature Update for Version Next (5.0.x)

--- a/incident-history/templates.html
+++ b/incident-history/templates.html
@@ -1,24 +1,24 @@
-<!-- For Incident History -->
+<!-- For Incident History Page -->
 <div class="card-in">
     <div class="card-header">
-        <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 25/08/2024
+        <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 11/04/2023
     </div>
     <div class="card-body text-primary" style="position: relative;">
         <img src="../img/caplets/CCLCap.png" alt="CCL" width="55px" style="padding-bottom: 1em;">
-        <a href="https://x.com/SMRT_Singapore/status/1827231238303969746"
+        <a href="https://twitter.com/SMRT_Singapore/status/1645574954535235585"
             style="position: absolute; top: -34px; right: 16px;">
             <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;" title="via X (Twitter)"></i>
         </a>
 
         <p class="card-text-ri" style="font-size: 15px;">
-            Due to a track fault, pls add 25mins train travel time btwn #Kranji and #Yishun. Free regular bus service is
-            available between Yishun and Kranji. Train service is still available.
+            UPDATE: Please allow for additional 10 mins travel time between Woodlands North and Gardens by the Bay in
+            both directions due to a signal fault.
         </p>
 
     </div>
 </div>
 
-<!-- Recent Incidents -->
+<!-- For Incident History Main Page -->
 
 <!-- Card 1 -->
 <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="100ms">
