--- a/mrt-lines/bp.html
+++ b/mrt-lines/bp.html
@@ -145,7 +145,11 @@
                       Having served the residents for 20 years, the BPLRT is currently undergoing a renewal project to
                       upgrade
                       its trains, tracks and signalling system.<br><br> (Source: <a
-                        href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network/bukit_panjang_lrt.html">LTA</a>)
+                        href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network/bukit_panjang_lrt.html">LTA</a>)&nbsp;
+
+                      <button type="button" class="read-aloud" onclick="readAloud(this.parentElement)" title="Read aloud">
+                        <i class="fa-solid fa-volume-up"></i></button>
+
                     </p>
                   </div>
                 </div>
@@ -447,6 +451,18 @@
       } else {
         link.href = '../img/networks/bp-diag.png';
         img.src = '../img/networks/bp-diag.png';
+      }
+    }
+
+    function readAloud(element) {
+      const text = element.innerText || element.textContent;
+      if ('speechSynthesis' in window) {
+        window.speechSynthesis.cancel(); // Stop any ongoing speech
+        const utter = new SpeechSynthesisUtterance(text);
+        utter.lang = 'en-SG';
+        window.speechSynthesis.speak(utter);
+      } else {
+        alert('Sorry, your browser does not support speech synthesis.');
       }
     }
   </script>
