--- a/mrt-lines/ccl.html
+++ b/mrt-lines/ccl.html
@@ -146,7 +146,12 @@
                       As its name suggests, the 30-station CCL is a circular rail line linking the North-South,
                       East-West and
                       North East Lines to the city.<br><br> (Source: <a
-                        href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network/circle_line.html">LTA</a>)
+                        href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network/circle_line.html">LTA</a>)&nbsp;
+
+                      <button type="button" class="read-aloud" onclick="readAloud(this.parentElement)"
+                        title="Read aloud">
+                        <i class="fa-solid fa-volume-up"></i></button>
+
                     </p>
                   </div>
                 </div>
@@ -599,6 +604,18 @@
       } else {
         link.href = '../img/networks/ccl-diag.png';
         img.src = '../img/networks/ccl-diag.png';
+      }
+    }
+
+    function readAloud(element) {
+      const text = element.innerText || element.textContent;
+      if ('speechSynthesis' in window) {
+        window.speechSynthesis.cancel(); // Stop any ongoing speech
+        const utter = new SpeechSynthesisUtterance(text);
+        utter.lang = 'en-SG';
+        window.speechSynthesis.speak(utter);
+      } else {
+        alert('Sorry, your browser does not support speech synthesis.');
       }
     }
   </script>
