--- a/mrt-lines/dtl.html
+++ b/mrt-lines/dtl.html
@@ -70,7 +70,7 @@
                     <li class="breadcrumb-item"><a href="../our-networks.html">
                         Networks</a>
                     </li>
-                    <li class="breadcrumb-item"><a href="#" style="color: #9648a0; cursor: default;" >
+                    <li class="breadcrumb-item"><a href="#" style="color: #9648a0; cursor: default;">
                         SBS Transit
                       </a>
                     </li>
@@ -154,7 +154,12 @@
                       buses. With the introduction of DTL3, the DTL is now 42-km long. This makes it the longest
                       underground and
                       driverless MRT line in Singapore.<br><br> (Source: <a
-                        href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network/downtown_line.html">LTA)</a>
+                        href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network/downtown_line.html">LTA</a>)&nbsp;
+
+                      <button type="button" class="read-aloud" onclick="readAloud(this.parentElement)"
+                        title="Read aloud">
+                        <i class="fa-solid fa-volume-up"></i></button>
+
                     </p>
                   </div>
                 </div>
@@ -611,6 +616,18 @@
       } else {
         link.href = '../img/networks/dtl-diag.png';
         img.src = '../img/networks/dtl-diag.png';
+      }
+    }
+
+    function readAloud(element) {
+      const text = element.innerText || element.textContent;
+      if ('speechSynthesis' in window) {
+        window.speechSynthesis.cancel(); // Stop any ongoing speech
+        const utter = new SpeechSynthesisUtterance(text);
+        utter.lang = 'en-SG';
+        window.speechSynthesis.speak(utter);
+      } else {
+        alert('Sorry, your browser does not support speech synthesis.');
       }
     }
   </script>
