--- a/mrt-lines/nel.html
+++ b/mrt-lines/nel.html
@@ -136,7 +136,11 @@
                       development was aimed at serving growing neighbourhoods in these regions.
                       <br><br>
                       The 20km line has 16 stations, and connects to six interchanges.<br><br> (Source: <a
-                        href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network/north_east_line.html">LTA</a>)
+                        href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network/north_east_line.html">LTA</a>) &nbsp;
+
+                      <button type="button" class="read-aloud" onclick="readAloud(this.parentElement)" title="Read aloud">
+                        <i class="fa-solid fa-volume-up"></i></button>
+
                     </p>
                   </div>
                 </div>
@@ -414,6 +418,18 @@
       } else {
         link.href = '../img/networks/nel-diag.png';
         img.src = '../img/networks/nel-diag.png';
+      }
+    }
+
+        function readAloud(element) {
+      const text = element.innerText || element.textContent;
+      if ('speechSynthesis' in window) {
+        window.speechSynthesis.cancel(); // Stop any ongoing speech
+        const utter = new SpeechSynthesisUtterance(text);
+        utter.lang = 'en-SG';
+        window.speechSynthesis.speak(utter);
+      } else {
+        alert('Sorry, your browser does not support speech synthesis.');
       }
     }
   </script>
