--- a/mrt-lines/nsl.html
+++ b/mrt-lines/nsl.html
@@ -70,8 +70,8 @@
                     <li class="breadcrumb-item"><a href="../our-networks.html">
                         Networks</a>
                     </li>
-                    <li class="breadcrumb-item" onclick="playAudio()"><a href="#" style="color: #ea1c2d; cursor: pointer;"
-                      title="Click me to hear one of the NSL Chimes!" >
+                    <li class="breadcrumb-item" onclick="playAudio()"><a href="#"
+                        style="color: #ea1c2d; cursor: pointer;" title="Click me to hear one of the NSL Chimes!">
                         SMRT Trains
                       </a>
                     </li>
@@ -142,6 +142,12 @@
                       Line
                       (CCL), Downtown Line (DTL), North East Line (NEL) and Bukit Panjang LRT. <br><br> (Source: <a
                         href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network/north_south_line.html">LTA</a>)
+                      &nbsp;
+
+                      <button type="button" class="read-aloud" onclick="readAloud(this.parentElement)"
+                        title="Read aloud">
+                        <i class="fa-solid fa-volume-up"></i></button>
+
                     </p>
                   </div>
                 </div>
@@ -525,21 +531,17 @@
       }
     }
 
-    document.addEventListener('DOMContentLoaded', function () {
-      var collapsible = document.getElementById('portfolioFilter');
-      var header = document.querySelector('.collapsible-header');
-
-      collapsible.addEventListener('show.bs.collapse', function () {
-        document.body.classList.add('noscroll');
-        header.style.zIndex = 1051;
-        header.style.position = 'relative';
-      });
-      collapsible.addEventListener('hide.bs.collapse', function () {
-        document.body.classList.remove('noscroll');
-        header.style.zIndex = '';
-        header.style.position = '';
-      });
-    });
+    function readAloud(element) {
+      const text = element.innerText || element.textContent;
+      if ('speechSynthesis' in window) {
+        window.speechSynthesis.cancel(); // Stop any ongoing speech
+        const utter = new SpeechSynthesisUtterance(text);
+        utter.lang = 'en-SG';
+        window.speechSynthesis.speak(utter);
+      } else {
+        alert('Sorry, your browser does not support speech synthesis.');
+      }
+    }
   </script>
 
   <script src="../js/jquery.min.js"></script>
