--- a/mrt-lines/pg.html
+++ b/mrt-lines/pg.html
@@ -141,7 +141,13 @@
                       of the communities in Punggol and Punggol. To accomodate more two-car trains, the SPLRT depot will
                       be
                       expanded by 2027. <br><br> (Source: <a
-                        href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network/Punggol_punggol_lrt.html">LTA</a>)
+                        href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network/Punggol_punggol_lrt.html">LTA</a>)&nbsp;
+                      &nbsp;
+
+                      <button type="button" class="read-aloud" onclick="readAloud(this.parentElement)"
+                        title="Read aloud">
+                        <i class="fa-solid fa-volume-up"></i></button>
+
                     </p>
                   </div>
                 </div>
@@ -538,6 +544,18 @@
       } else {
         link.href = '../img/networks/pg-diag.png';
         img.src = '../img/networks/pg-diag.png';
+      }
+    }
+
+    function readAloud(element) {
+      const text = element.innerText || element.textContent;
+      if ('speechSynthesis' in window) {
+        window.speechSynthesis.cancel(); // Stop any ongoing speech
+        const utter = new SpeechSynthesisUtterance(text);
+        utter.lang = 'en-SG';
+        window.speechSynthesis.speak(utter);
+      } else {
+        alert('Sorry, your browser does not support speech synthesis.');
       }
     }
   </script>
