--- a/mrt-lines/tel.html
+++ b/mrt-lines/tel.html
@@ -138,7 +138,11 @@
                       Along its route are eight interchanges that connect the NSL to the East-West Line (EWL), Circle
                       Line
                       (CCL), Downtown Line, North East Line (NEL) and Bukit Panjang LRT. <br><br> (Source: <a
-                        href="https://www.lta.gov.sg/content/ltagov/en/upcoming_projects/rail_expansion/thomson_east_coast_line.html">LTA)</a>
+                        href="https://www.lta.gov.sg/content/ltagov/en/upcoming_projects/rail_expansion/thomson_east_coast_line.html">LTA</a>)&nbsp;
+
+                      <button type="button" class="read-aloud" onclick="readAloud(this.parentElement)" title="Read aloud">
+                        <i class="fa-solid fa-volume-up"></i></button>
+
                     </p>
                   </div>
                 </div>
@@ -507,6 +511,18 @@
       } else {
         link.href = '../img/networks/tel-diag.png';
         img.src = '../img/networks/tel-diag.png';
+      }
+    }
+
+        function readAloud(element) {
+      const text = element.innerText || element.textContent;
+      if ('speechSynthesis' in window) {
+        window.speechSynthesis.cancel(); // Stop any ongoing speech
+        const utter = new SpeechSynthesisUtterance(text);
+        utter.lang = 'en-SG';
+        window.speechSynthesis.speak(utter);
+      } else {
+        alert('Sorry, your browser does not support speech synthesis.');
       }
     }
   </script>
