--- a/mrt-lines/dtl.html
+++ b/mrt-lines/dtl.html
@@ -630,6 +630,12 @@
         alert('Sorry, your browser does not support speech synthesis.');
       }
     }
+
+    window.addEventListener('beforeunload', function () {
+      if ('speechSynthesis' in window) {
+        window.speechSynthesis.cancel();
+      }
+    });
   </script>
 
   <script src="../js/jquery.min.js"></script>
