2025-06 Feature Update for Version Next (5.0.0)

--- a/incident-history/2023_incident-history.html
+++ b/incident-history/2023_incident-history.html
@@ -108,6 +108,10 @@
 
     <section id="lrd" class="flex-column justify-content-center">
         <div class="row row-do wow fadeInUp" data-wow-delay="100ms">
+            <div class="alert alert-primary wow fadeInUp" data-wow-delay="100ms" role="alert"
+                style="margin-bottom: 2em; cursor: default;">
+                <i class="fa-solid fa-circle-info"></i>&nbsp; <b>Data migration ongoing. Some data may not be available. </b>
+            </div>
             <!-- Month Tabs -->
             <div class="col-12">
                 <ul class="nav nav-tabs" id="ihTab" role="tablist">
@@ -188,11 +192,97 @@
 
                     <!-- May -->
                     <div class="tab-pane fade" id="tab8" role="tabpanel" aria-labelledby="tab8-tab">
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 10/05/2023
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/DTLCap.png" alt="DTL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://twitter.com/SBSTransit_Ltd/status/1656237948411727873"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
 
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    DTL service from DT35 Expo to DT29 Bedok North is delayed due to a train fault. Free
+                                    regular bus services
+                                    are available at designated stops. Additional travel time of about 15 minutes may be
+                                    expected. We are sorry.
+                                </p>
+
+                            </div>
+                        </div>
+
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 04/05/2023
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/BPCap.png" alt="BP" width="55px" style="padding-bottom: 1em;">
+                                <a href="https://twitter.com/SMRT_Singapore/status/1654045602450391040"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a train fault, normal train service is affected. Shuttle train service is
+                                    available between Choa Chu
+                                    Kang and Bt Panjang stations. Train service between Bt Panjang & Petir via Service A
+                                    and Bt Panjang & Senja
+                                    via Service B is not affected.
+                                </p>
+
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Apr -->
                     <div class="tab-pane fade" id="tab9" role="tabpanel" aria-labelledby="tab9-tab">
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 25/04/2023
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/BPCap.png" alt="BP" width="55px" style="padding-bottom: 1em;">
+                                <a href="https://twitter.com/SMRT_Singapore/status/1650815429043195904"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a trackside switch fault, please use Service B for your journey till end of
+                                    revenue hours.
+                                </p>
+
+                            </div>
+                        </div>
+
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 18/04/2023
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/CCLCap.png" alt="CCL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://twitter.com/SMRT_Singapore/status/1648240598703562754"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a power fault, please add 20 minutes additional train travel time btw
+                                    #KentRidge and #Harbourfront.
+                                    Free regular buses are available btw #BuonaVista and #Harbourfront.
+                                </p>
+
+                            </div>
+                        </div>
+
                         <div class="card-in">
                             <div class="card-header">
                                 <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 11/04/2023
