--- a/incident-history/templates.html
+++ b/incident-history/templates.html
@@ -1,18 +1,18 @@
 <!-- For Incident History Page -->
 <div class="card-in">
     <div class="card-header">
-        <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 11/04/2023
+        <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 10/05/2023
     </div>
     <div class="card-body text-primary" style="position: relative;">
-        <img src="../img/caplets/CCLCap.png" alt="CCL" width="55px" style="padding-bottom: 1em;">
-        <a href="https://twitter.com/SMRT_Singapore/status/1645574954535235585"
+        <img src="../img/caplets/BPCap.png" alt="BP" width="55px" style="padding-bottom: 1em;">
+        <a href="https://twitter.com/SBSTransit_Ltd/status/1656237948411727873"
             style="position: absolute; top: -34px; right: 16px;">
             <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;" title="via X (Twitter)"></i>
         </a>
 
         <p class="card-text-ri" style="font-size: 15px;">
-            UPDATE: Please allow for additional 10 mins travel time between Woodlands North and Gardens by the Bay in
-            both directions due to a signal fault.
+            DTL service from DT35 Expo to DT29 Bedok North is delayed due to a train fault. Free regular bus services
+            are available at designated stops. Additional travel time of about 15 minutes may be expected. We are sorry.
         </p>
 
     </div>
