--- a/eicw/eicw copy.html
+++ b/eicw/eicw copy.html
@@ -14,7 +14,7 @@
 
     <link rel="icon" href="../img/core-img/favicon.png">
 
-    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
+     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
 
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/style-breakpoints.css">
@@ -104,10 +104,7 @@
                 <div id="portfolioFilter" class="collapse">
                     <div class="portfolio-filter mt-3">
                         <a href="#">
-                            <button class="btn">Design System Introduction</button>
-                        </a>
-                        <a href="#">
-                            <button class="btn">Proposed Changes</button>
+                            <button class="btn">Improving Existing Wayfinding Designs.</button>
                         </a>
                         <a href="eicw-2.html">
                             <button class="btn">Enhancing Clarity & Fine-Tunes</button>
