2025-06 Cumulative Update for Version 5.1 (5.1.X)

--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -104,7 +104,7 @@
                 <div id="portfolioFilter" class="collapse">
                     <div class="portfolio-filter mt-3">
                         <a href="#">
-                            <button class="btn">Design System Introduction</button>
+                            <button class="btn active">Design System Introduction</button>
                         </a>
                         <a href="#">
                             <button class="btn">Proposed Wayfinding Changes - Trains</button>
