--- a/eicw/eicw-2a.html
+++ b/eicw/eicw-2a.html
@@ -640,7 +640,7 @@
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-    <script src="js/eicw-2.js"></script>
+    <script src="js/eicw-2a.js"></script>
 
     <script src="../js/jquery.min.js"></script>
 
